# AI-Lead-Generator

./: .gitignore  ReadMe.md  credentials.json  main.py  output_1756938424.csv  pyproject.toml  status.txt
config/: config.py
interface/: .gitignore  app.vue  nuxt.config.ts  package-lock.json  package.json
interface/components/: Button.vue  Form.vue  Test.vue  TextArea.vue
interface/interfaces/: StartProcessing.ts
interface/pages/: index.vue  scraper.vue
interface/server/api/: check-status.ts  clear-logs.ts  download-file.ts  generate-mail.ts  get-leads.ts  get-log.ts  get-logs.ts  get-sellers-leads.ts  hello.ts  logs.ts  refresh-logs.ts  scrape-link.ts  start-processing.ts  test.ts
interface/server/apis/: clear-logs.ts
interface/utils/: refresh-logs.ts
src/api/: app.py
src/api/routes/: logs.py  processing.py  scraper.py
src/core/: config.py
src/models/: model.py
src/services/: ai_analysis.py  compose_email.py  generate_company_domains.py  generate_sellers_leads.py  get_emails.py  pdf_service.py  redis_services.py  rel.json  scraper_service.py  send_mail.py
