[project]
name = "ai-lead-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "openai>=1.82.0",
    "pydantic>=2.11.5",
    "redis>=6.1.0",
    "requests>=2.32.3",
    "typing>=3.10.0.0",
    "uvicorn>=0.34.2",
]
