[project]
name = "ai-lead-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "google-api-python-client>=2.170.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "httpx>=0.28.1",
    "openai>=1.82.0",
    "pillow>=11.2.1",
    "pydantic>=2.11.5",
    "pypdf2[crypto]>=3.0.1",
    "python-multipart>=0.0.20",
    "redis>=6.1.0",
    "requests>=2.32.3",
    "typing>=3.10.0.0",
    "uvicorn>=0.34.2",
]
